# fluid-sims

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
.github/: copilot-instructions.md
assets/: imgui.ini
lxlib/: Array2D_imageProc.cpp  ConfigManager3.cpp  ConfigManager3.h  TextureCache.h  gpgpu.h  gpuBlur2_5.cpp  gpuBlur2_5.h  lxGlslProg.h  lxVaoVbo.h  shade.cpp  util.h
src/: App.vcxproj  App.vcxproj.filters  Array2D_imageProc.cpp  Array2D_imageProc.h  Array2D_imageProc.ixx  GridFluidSketch.h  GridFluidSketch.ixx  IntegratedConsole.cpp  IntegratedConsole.h  IntegratedConsole.ixx  MultiscaleGrayScottSketch2026.h  MyTimer.cpp  MyTimer.h  MyTimer.ixx  OldCode.txt  ParticleFluidSketch.h  ParticleFluidSketch.ixx  SketchScaffold.cpp  SketchScaffold.h  SketchScaffold.ixx  TextureCache.cpp  TextureCache.ixx  easyfft.cpp  gpgpu.cpp  gpgpu.h  gpgpu.ixx  gpuBlur2_5.cpp  gpuBlur2_5.h  gpuBlur2_5.ixx  imgui.ini  lxApp.h  lxAreaRectf.h  lxAreaRectf.ixx  lxGlslProg.ixx  lxTextureRef.h  lxTextureRef.ixx  lxVaoVbo.ixx  main.cpp  precompiled.h  shade.cpp  (+11 more)
src/FftRaysSketch/: FftRaysConfig.toml  FftRaysSketch.ixx  OldCode.txt
src/GridFluidSketch/: GridFluidSketch.h  GridFluidSketch.ixx
src/MultiscaleCurvatureGrowthSketch/: Sketch.cpp  Sketch.h  ThisSketch_ImageProcessingHelpers.h  gpuBlurClaude.h
src/MultiscaleGrowthSketch/: MultiscaleGrowthSketch.h  MultiscaleGrowthSketch.ixx  ThisSketch_ImageProcessingHelpers.cpp  ThisSketch_ImageProcessingHelpers.h  ThisSketch_ImageProcessingHelpers.ixx  gpuBlurClaude.cpp  gpuBlurClaude.h  gpuBlurClaude.ixx
src/ParticleTraces2DSketch/: ParticleTraces2DSketch.h  ParticleTraces2DSketch.ixx
src/VarianceAddSketch/: VarianceAddConfig.toml  VarianceAddSketch.ixx
src/lxlib/: AreaRectf.h  AreaRectf.ixx  Array2D.ixx  Array2D_imageProc.cpp  Array2D_imageProc.h  Array2D_imageProc.ixx  ConfigManager3.cpp  ConfigManager3.h  ConfigManager3.ixx  GlslProg.h  GlslProg.ixx  IntegratedConsole.ixx  KissFFTWrapper.ixx  MyTimer.ixx  Rect.ixx  SketchBase.h  SketchBase.ixx  SketchScaffold.ixx  TextureCache.cpp  TextureCache.h  TextureCache.ixx  TextureRef.h  TextureRef.ixx  VaoVbo.h  VaoVbo.ixx  VkFftWrapper.ixx  colorspaces.cpp  colorspaces.h  colorspaces.ixx  gpgpu.cpp  gpgpu.h  gpgpu.ixx  gpuBlur.ixx  gpuBlur2_5.cpp  gpuBlur2_5.h  gpuBlur2_5.ixx  lxTextureRef.h  macros.h  precompiled.h  shade.cpp  (+7 more)
